namespace TuberTreats.Models
{
    public class Topping
    {
        public int Id { get; set; }  // Primary Key
        public string Name { get; set; } = string.Empty;  // Topping name
    }
}
